# cairo-lint

./: .gitignore  .tool-versions  CONTRIBUTING.md  Cargo.toml  README.md  lint_docs_template.html
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  triage-issue.yml  website-deploy.yml
crates/cairo-lint-cli/: Cargo.toml
crates/cairo-lint-cli/src/: helpers.rs  main.rs
crates/cairo-lint-core/: Cargo.toml
crates/cairo-lint-core/src/: context.rs  fixes.rs  helper.rs  lib.rs  plugin.rs  queries.rs
crates/cairo-lint-core/src/lints/: bitwise_for_parity_check.rs  bool_comparison.rs  breaks.rs  double_comparison.rs  double_parens.rs  duplicate_underscore_args.rs  enum_variant_names.rs  eq_op.rs  erasing_op.rs  int_op_one.rs  mod.rs  panic.rs  performance.rs  redundant_op.rs  single_match.rs
crates/cairo-lint-core/src/lints/ifs/: collapsible_if.rs  collapsible_if_else.rs  equatable_if_let.rs  ifs_same_cond.rs
crates/cairo-lint-core/src/lints/loops/: loop_for_while.rs  loop_match_pop_front.rs  mod.rs
crates/cairo-lint-core/src/lints/manual/: helpers.rs  manual_err.rs  manual_expect.rs  manual_expect_err.rs  manual_is.rs  manual_ok.rs  manual_ok_or.rs  manual_unwrap_or_default.rs  mod.rs
crates/cairo-lint-core/tests/: main.rs  tests.rs
crates/cairo-lint-core/tests/bitwise_for_parity_check/: mod.rs
crates/cairo-lint-core/tests/bool_comparison/: mod.rs
crates/cairo-lint-core/tests/breaks/: mod.rs
crates/cairo-lint-core/tests/double_comparison/: mod.rs
crates/cairo-lint-core/tests/double_parens/: mod.rs
crates/cairo-lint-core/tests/duplicate_underscore_args/: mod.rs
crates/cairo-lint-core/tests/enum_variant_names/: mod.rs
crates/cairo-lint-core/tests/eq_op/: mod.rs
crates/cairo-lint-core/tests/erasing_operations/: mod.rs
crates/cairo-lint-core/tests/helpers/: mod.rs  scarb.rs
crates/cairo-lint-core/tests/ifs/: collapsible_if.rs  collapsible_if_else.rs  equatable_if_let.rs  ifs_same_cond.rs  mod.rs
crates/cairo-lint-core/tests/int_operations/: mod.rs
crates/cairo-lint-core/tests/loops/: loop_for_while.rs  loops_match_pop_front.rs  mod.rs
crates/cairo-lint-core/tests/manual/: manual_err.rs  manual_expect.rs  manual_expect_err.rs  manual_is_err.rs  manual_is_none.rs  manual_is_ok.rs  manual_is_some.rs  manual_ok.rs  manual_ok_or.rs  manual_unwrap_or_default.rs
crates/cairo-lint-core/tests/panic/: mod.rs
crates/cairo-lint-core/tests/performance/: mod.rs
crates/cairo-lint-core/tests/redundant_op/: mod.rs
crates/cairo-lint-core/tests/single_match/: mod.rs
crates/cairo-lint-core/tests/test_files/double_comparison/: double_comparison
crates/cairo-lint-core/tests/test_files/eq_op/: eq_op
crates/cairo-lint-core/tests/test_files/int_op_one/: int_op_one
crates/cairo-lint-core/tests/test_files/single_match/: destructuring_match
crates/cairo-lint-core/tests/unused_imports/: mod.rs
crates/cairo-lint-core/tests/unused_variables/: mod.rs
crates/cairo-lint-test-utils/src/: lib.rs
src/: context.rs  diagnostics.rs  fixes.rs  helper.rs  lib.rs  plugin.rs  queries.rs
src/lints/: bitwise_for_parity_check.rs  bool_comparison.rs  breaks.rs  clone_on_copy.rs  double_comparison.rs  double_parens.rs  duplicate_underscore_args.rs  empty_enum_brackets_variant.rs  enum_variant_names.rs  eq_op.rs  erasing_op.rs  int_op_one.rs  mod.rs  panic.rs  performance.rs  redundant_brackets_in_enum_call.rs  redundant_op.rs  single_match.rs
src/lints/ifs/: collapsible_if.rs  collapsible_if_else.rs  equatable_if_let.rs  ifs_same_cond.rs  mod.rs
src/lints/loops/: loop_for_while.rs  loop_match_pop_front.rs
src/lints/manual/: helpers.rs  manual_assert.rs  manual_err.rs  manual_expect.rs  manual_expect_err.rs  manual_is.rs  manual_ok.rs  manual_ok_or.rs  manual_unwrap_or_default.rs  mod.rs
src/lints/performance/: inefficient_while_comp.rs  mod.rs
tests/: main.rs
tests/clone_on_copy/: mod.rs
tests/double_parens/: mod.rs
tests/empty_enum_brackets_variant/: mod.rs
tests/eq_op/: mod.rs
tests/helpers/: mod.rs
tests/ifs/: collapsible_if.rs  equatable_if_let.rs
tests/loops/: loop_for_while.rs  loops_match_pop_front.rs
tests/manual/: manual_assert.rs  manual_expect_err.rs  manual_is_ok.rs  manual_ok.rs  manual_ok_or.rs  mod.rs
tests/panic/: mod.rs
tests/performance/: mod.rs
tests/redundant_brackets_in_enum_call/: mod.rs
tests/single_match/: mod.rs
tests/unused_imports/: mod.rs
tests/unused_variables/: mod.rs
website/: docs.md  index.md  lints_metadata.json  package-lock.json  package.json
website/.vitepress/: config.mjs  lints_sidebar.mjs  syntaxes.mjs
website/.vitepress/components/: Footer.vue  Home.vue
website/.vitepress/components/home/: Download.vue
website/.vitepress/theme/: Layout.vue  index.js  style.css
website/docs/: default_profile.md
website/docs/lints/: bitwise_for_parity_check.md  bool_comparison.md  break_unit.md  clone_on_copy.md  collapsible_if.md  collapsible_if_else.md  contradictory_comparison.md  destruct_match.md  div_eq_op.md  double_parens.md  duplicate_underscore_args.md  empty_enum_brackets_variant.md  enum_variant_names.md  eq_bitwise_op.md  eq_comp_op.md  eq_diff_op.md  eq_logical_op.md  equality_match.md  equatable_if_let.md  erasing_op.md  ifs_same_cond.md  impossible_comparison.md  inefficient_while_comp.md  int_ge_min_one.md  int_ge_plus_one.md  int_le_min_one.md  int_le_plus_one.md  loop_for_while.md  loop_match_pop_front.md  manual_assert.md  manual_err.md  manual_expect.md  manual_expect_err.md  manual_is_err.md  manual_is_none.md  manual_is_ok.md  manual_is_some.md  manual_ok.md  manual_ok_or.md  manual_unwrap_or_default.md  (+6 more)
xtask/: Cargo.toml
xtask/src/: main.rs  update_docs.rs
