[package]
name = "cairo-lint"
description = "Core library for linting Cairo language code."
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true


[workspace]
resolver = "2"
members = [
  "xtask"
]

[workspace.package]
version = "2.11.4"
edition = "2021"
repository = "https://github.com/software-mansion/cairo-lint"
license-file = "LICENSE"

# Managing dependencies on crates from starkware-libs/cairo repository:
#
# The Cairo compiler is made of a bunch of crates that inter-depend on each other and have
# synchronised versioning.
# It is very important to use a single revision of these crates in the entire Cairo toolchain,
# which consists of Cairo compiler, Scarb, CairoLS and other tools.
# The toolchain is eventually built by Scarb, which depends on everything other as regular crates.
# To ensure that all crates in the toolchain use the same revision of Cairo crates, we use a patch
# mechanism that Cargo provides.
# Because Cargo requires patches to change the crate source, we have an unspoken contract that
# all tools *always* depend on some crates.io versions of Cairo crates and Scarb uses
# [patch.crates.io] table to set final git revision for everything.
#
# To keep our Cargo.toml following this contract, always use `cargo xtask upgrade`
# for manipulating these dependencies.
[dependencies]
anyhow = "1.0.96"
cairo-lang-compiler = "*"
cairo-lang-defs = "*"
cairo-lang-diagnostics = "*"
cairo-lang-filesystem = "*"
cairo-lang-semantic = "*"
cairo-lang-syntax = "*"
cairo-lang-test-plugin = "*"
cairo-lang-utils = "*"
if_chain = "1.0.2"
indoc = "2"
itertools = "0.14.0"
log = "0.4.27"
num-bigint = "0.4.6"
scarb-metadata = "1.14.0"
tempfile = "3"
which = "7"

[dev-dependencies]
ctor = "0.2.9"
insta = "1.41.0"
pretty_assertions = "1.4.1"
test-case = "3.0"

# Here we specify real dependency specifications for Cairo crates *if* currently we want to use
# a particular unreleased commit (which is frequent mid-development).
# We list all Cairo crates that go into Scarb's compilation unit even if Scarb itself does not depend
# on some of them directly.
# This ensures no duplicate instances of Cairo crates are pulled in by mistake. 
[patch.crates-io]
cairo-lang-casm = { git = "https://github.com/starkware-libs/cairo", rev = "8788411244dda6a629cf1e07f127042cffc62a8f" }
cairo-lang-compiler = { git = "https://github.com/starkware-libs/cairo", rev = "8788411244dda6a629cf1e07f127042cffc62a8f" }
cairo-lang-debug = { git = "https://github.com/starkware-libs/cairo", rev = "8788411244dda6a629cf1e07f127042cffc62a8f" }
cairo-lang-defs = { git = "https://github.com/starkware-libs/cairo", rev = "8788411244dda6a629cf1e07f127042cffc62a8f" }
cairo-lang-diagnostics = { git = "https://github.com/starkware-libs/cairo", rev = "8788411244dda6a629cf1e07f127042cffc62a8f" }
cairo-lang-eq-solver = { git = "https://github.com/starkware-libs/cairo", rev = "8788411244dda6a629cf1e07f127042cffc62a8f" }
cairo-lang-filesystem = { git = "https://github.com/starkware-libs/cairo", rev = "8788411244dda6a629cf1e07f127042cffc62a8f" }
cairo-lang-formatter = { git = "https://github.com/starkware-libs/cairo", rev = "8788411244dda6a629cf1e07f127042cffc62a8f" }
cairo-lang-lowering = { git = "https://github.com/starkware-libs/cairo", rev = "8788411244dda6a629cf1e07f127042cffc62a8f" }
cairo-lang-parser = { git = "https://github.com/starkware-libs/cairo", rev = "8788411244dda6a629cf1e07f127042cffc62a8f" }
cairo-lang-plugins = { git = "https://github.com/starkware-libs/cairo", rev = "8788411244dda6a629cf1e07f127042cffc62a8f" }
cairo-lang-proc-macros = { git = "https://github.com/starkware-libs/cairo", rev = "8788411244dda6a629cf1e07f127042cffc62a8f" }
cairo-lang-project = { git = "https://github.com/starkware-libs/cairo", rev = "8788411244dda6a629cf1e07f127042cffc62a8f" }
cairo-lang-semantic = { git = "https://github.com/starkware-libs/cairo", rev = "8788411244dda6a629cf1e07f127042cffc62a8f" }
cairo-lang-sierra = { git = "https://github.com/starkware-libs/cairo", rev = "8788411244dda6a629cf1e07f127042cffc62a8f" }
cairo-lang-sierra-ap-change = { git = "https://github.com/starkware-libs/cairo", rev = "8788411244dda6a629cf1e07f127042cffc62a8f" }
cairo-lang-sierra-gas = { git = "https://github.com/starkware-libs/cairo", rev = "8788411244dda6a629cf1e07f127042cffc62a8f" }
cairo-lang-sierra-generator = { git = "https://github.com/starkware-libs/cairo", rev = "8788411244dda6a629cf1e07f127042cffc62a8f" }
cairo-lang-sierra-to-casm = { git = "https://github.com/starkware-libs/cairo", rev = "8788411244dda6a629cf1e07f127042cffc62a8f" }
cairo-lang-sierra-type-size = { git = "https://github.com/starkware-libs/cairo", rev = "8788411244dda6a629cf1e07f127042cffc62a8f" }
cairo-lang-starknet = { git = "https://github.com/starkware-libs/cairo", rev = "8788411244dda6a629cf1e07f127042cffc62a8f" }
cairo-lang-starknet-classes = { git = "https://github.com/starkware-libs/cairo", rev = "8788411244dda6a629cf1e07f127042cffc62a8f" }
cairo-lang-syntax = { git = "https://github.com/starkware-libs/cairo", rev = "8788411244dda6a629cf1e07f127042cffc62a8f" }
cairo-lang-syntax-codegen = { git = "https://github.com/starkware-libs/cairo", rev = "8788411244dda6a629cf1e07f127042cffc62a8f" }
cairo-lang-test-plugin = { git = "https://github.com/starkware-libs/cairo", rev = "8788411244dda6a629cf1e07f127042cffc62a8f" }
cairo-lang-test-utils = { git = "https://github.com/starkware-libs/cairo", rev = "8788411244dda6a629cf1e07f127042cffc62a8f" }
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo", rev = "8788411244dda6a629cf1e07f127042cffc62a8f" }

[profile.ci]
inherits = "test"
strip = "debuginfo"
[profile.ci.package."rust-analyzer-salsa"]
opt-level = 3
