[package]
name = "xtask"
version = "1.0.0"
edition.workspace = true
publish = false

[dependencies]
anyhow = "1.0.96"
cairo-toolchain-xtasks = "1"
cairo-lint = { path = "../" }
clap = { version = "4.5.34", features = ["derive"]}
serde = { version = "1", features = ["serde_derive"] }
serde_json = { version = "1" }
